--- a/Task2/Task2.vcxproj
+++ b/Task2/Task2.vcxproj
@@ -142,6 +142,14 @@
       <DependentUpon>MainUI.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\1.png" />
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\2.png" />
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\3.png" />
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\4.png" />
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\5.png" />
+    <Image Include="C:\Users\PC\OneDrive\Document\Unity\Sprites\Game Owner\6.png" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
