--- a/Task1/Task1.vcxproj
+++ b/Task1/Task1.vcxproj
@@ -80,13 +80,13 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4;D:\Storge\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opencv_world4d.lib;opencv_world4.lib</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world4d.lib</AdditionalDependencies>
       <SubSystem>Windows</SubSystem>
       <EntryPointSymbol>main</EntryPointSymbol>
-      <AdditionalLibraryDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\lib;D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\debug\lib;D:\Storge\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\debug\lib</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>D:\Storge\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\debug\lib</AdditionalLibraryDirectories>
     </Link>
     <ProjectReference>
       <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
@@ -118,11 +118,12 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4;D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\include\opencv4</AdditionalIncludeDirectories>
+      <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opencv_world4.lib;opencv_world4.lib;opencv_world4d.lib;opencv_world4.lib;opencv_world4d.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\lib;D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\debug\lib;D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opencv_world4.lib</AdditionalDependencies>
+      <AdditionalLibraryDirectories>D:\Storage\Dev\Cpp\Libraries\vcpkg\installed\x64-windows\lib</AdditionalLibraryDirectories>
       <SubSystem>Windows</SubSystem>
       <EntryPointSymbol>main</EntryPointSymbol>
     </Link>
@@ -138,6 +139,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ImgProcess.h" />
     <ClInclude Include="MainUI.h">
       <FileType>CppForm</FileType>
     </ClInclude>
